--- a/style/main.scss
+++ b/style/main.scss
@@ -53,17 +53,17 @@ body {
     .time {
       display: inline-block;
 
-      width: 12.4rem;
+      width: 14.5rem;
       height: auto;
 
-      margin: 12rem .5rem 5rem;
+      margin: 10rem .5rem 5rem;
 
       span {
         display: block;
         
         margin-bottom: .5rem;
         
-        font-size: 12rem;
+        font-size: 14rem;
         font-weight: 500;
         
         text-align: center;
@@ -96,7 +96,7 @@ body {
         position: absolute;
 
         width: .4rem;
-        height: 20rem;
+        height: 25rem;
 
         top: 10;
         left: 49.5%;
@@ -152,10 +152,10 @@ body {
 
   button {
 
-    width: 4rem;
-    height: 4rem;
+    width: 5rem;
+    height: 5rem;
 
-    margin: 0 .8rem;
+    margin: 0 .9rem;
 
     font-size: 2rem;
     cursor: pointer;
@@ -164,6 +164,13 @@ body {
     background: #60ac36; //#727376; // #29166f;
     color: #fff;
     
+    img {
+      width: 2.8rem;
+      height: 2.8rem;
+
+      vertical-align: middle;
+    }
+
     &:hover {
       background: #4d8a2c;
     }
